--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "axios-mock-adapter": "^1.16.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "16.9.0-alpha.0",
+    "react-dom": "16.9.0-alpha.0",
     "react-scripts": "2.1.8"
   },
   "scripts": {
